# meltdown-chess-engine

./: .clang-tidy  .gitignore  .gitmodules  .rgignore  Makefile  README.md  meson.build  meson.options  spam.sh
.github/workflows/: create_release.yml  nightly.yml  pull_request.yml
docker/: Dockerfile  build.sh  run.sh
docs/: uci_protocol.txt
magics/: main.cpp  meson.build
scripts/: build.sh  ci_build.sh  clean.sh  create_release.sh  debug.sh  get-native-target.sh  release.sh  run_tuning.sh  unit_test.sh  verify_commit_bench.sh
src/: attack_generation.h  bit_board.h  board_defs.h  engine.h  file_logger.h  input_parsing.h  kings_magic.h  knights_magic.h  main.cpp  move_generation.h  positioning.h  time_manager.h  uci_handler.h  uci_options.h
src/core/: attack_generation.h  bit_board.h  board_defs.h  mask_tables.h  move_handling.h  thread_pool.h  time_manager.h  transposition.h  zobrist_hashing.h
src/engine/: bench.h  move_handling.h  thread_pool.h  tt_hash.h  tt_hash_table.h  zobrist_hashing.h
src/evaluation/: draw.h  evaluate.h  evaluation_weights.h  evaluator.h  game_phase.h  history_moves.h  killer_moves.h  kingPawnCache.h  lmr_table.h  material_scoring.h  move_ordering.h  move_picker.h  move_scoring.h  move_vote_map.h  perft.h  pesto_tables.h  position_tables.h  positioning.h  pv_table.h  repetition.h  score.h  searcher.h  see_swap.h  static_evaluation.h  term_methods.h  term_score.h  terms.h  time_manager.h
src/helpers/: bit_operations.h  debug.h  formatters.h  game_phases.h  memory.h
src/interface/: outputs.h  uci_handler.h  uci_options.h
src/magics/: hashing.h  magics.h  pext.h
src/movegen/: bishops.h  kings.h  knights.h  move_generation.h  move_types.h  pawns.h  rooks.h
src/movement/: bishops.h  kings.h  knights.h  move_generation.h  move_types.h  pawns.h  rooks.h
src/parsing/: fen_parser.h  input_parsing.h  piece_parsing.h
src/search/: capture_history.h  continuation_history.h  correction_history.h  counter_moves.h  history_moves.h  killer_moves.h  lmr_table.h  move_picker.h  pv_table.h  repetition.h  search_tables.h  searcher.h  stack_info.h
src/spsa/: README.md  parameters.h
src/syzygy/: syzygy.h
src/tools/: bench.h  perft.h
src/utils/: bit_operations.h  debug.h  formatters.h  memory.h
subprojects/: fathom.wrap
targets/: linux-gcc-x86-64-v2.txt  linux-gcc-x86-64-v3.txt  linux-native.txt  linux-x86-64-v2.txt  linux-x86-64-v3.txt  meson.build  windows-gcc-x86-64-v2.txt  windows-gcc-x86-64-v3.txt  windows-native.txt  windows-x86-64-v2.txt  windows-x86-64-v3.txt
tests/: meson.build  perft.cpp
tests/cute-chess/: .gitignore  README.md  build-baseline.sh  build-engines.sh  config.json.example  run-tournament.sh
tests/src/: test_history_moves.cpp  test_killer_moves.cpp  test_move_gen_hashing.cpp  test_move_ordering.cpp  test_move_picker.cpp  test_move_vote_map.cpp  test_perft.cpp  test_pv_table.cpp  test_scoring.cpp  test_see_swap.cpp  test_thread_pool.cpp  test_transposition.cpp  test_tt_hash_table.cpp  test_zobrist_hashing.cpp
tuner/: README.md  download-training-data.sh  format_results.py  meson.build
tuner/scripts/: build.sh  download-training-data.sh  run.sh
tuner/src/: gradient_descent.h  main.cpp  tracer.h  training_data.h  tuning_parameters.h
tuner/src/tuner/: file_generation.h  gradient_descent.h  term_tracer.h  training_data.h  tuning_parameters.h
version/: meson.build  version.h.in
